routes for services and product, reroutes to them and fixed css covering

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -29,16 +29,6 @@
     align-items: center;
 }
 
-.fa-typo3 {
-    font-size: 50px;
-    margin-left: 0.5rem;
-
-}
-
-.fa-tree-palm{
-    margin-left: 0.5rem;
-    font-size: 1.8rem;
-}
 
 .nav-menu {
     display: grid;
